# ChangeLog for media-radio/gpredict
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Apr 2009; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
  gpredict-1.0_beta2.ebuild, files/gpredict-1.0_beta2-doc.patch:
  added installation of needed doc files

  19 Apr 2009; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
  -gpredict-1.0_beta1.ebuild, +gpredict-1.0_beta2.ebuild,
  -files/gpredict-1.0_beta1-doc.patch,
  -files/gpredict-1.0_beta1-goocanvas.patch,
  +files/gpredict-1.0_beta2-doc.patch:
  Version bump

  16 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> metadata.xml:
  Drop unused useflag from metadata.xml

  31 Dec 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
  gpredict-1.0_beta1.ebuild:
  removed unneeded quotation

  30 Dec 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
  -gpredict-0.9.0.ebuild, -files/gpredict-0.9.0-goocanvas.patch,
  +gpredict-1.0_beta1.ebuild, +files/gpredict-1.0_beta1-doc.patch,
  +files/gpredict-1.0_beta1-goocanvas.patch:
  Version bump

  22 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> metadata.xml:
  Added USE flag description wrt GLEP 56

  06 Nov 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
  +files/gpredict-0.9.0-goocanvas.patch, -gpredict-0.8.0.ebuild,
  +gpredict-0.9.0.ebuild:
  Version bump; Moved goocanvas to external DEPEND (requires patch and
  autotools); Added 'coverage' USE flag; Added curl DEPEND; Dropped ~x86-fbsd
  keyword due to goocanvas DEPEND

  21 Jul 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
  -gpredict-0.7.1.ebuild, +gpredict-0.8.0.ebuild:
  Version bump

  18 Apr 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
  gpredict-0.7.1.ebuild:
  Added ~x86 keyword

  18 Apr 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
  gpredict-0.7.1.ebuild:
  Added ~x86-fbsd keyword

  18 Apr 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com
  +gpredict-0.7.1.ebuild, +metadata.xml:
  New ebuild wrt bug 125342
