@@ -1,5 +1,5 @@
 AUX gpredict-1.0_beta2-doc.patch 593 RMD160 ad7dae7f3e7cda3df83052a53f532383b8828e99 SHA1 6e2396f37e98cb65fbacdffb58003ee4e949d660 SHA256 a02ee94f3f2b12bf2aec6eeaa0645a7a353cb683d2f1ab9474e7455a631a9ed2
 DIST gpredict-1.0b2.tar.gz 1966020 RMD160 84fc52313d51165a4a56488817c4a2fa02c5362f SHA1 6e25e06ac0944bcc7bebf5e3658cfe586b298964 SHA256 1cc81d9117d69ed2b2973ff8d4cbf51fa1bf6f78c4ffdd07d65e19352d56d177
-EBUILD gpredict-1.0_beta2.ebuild 1008 RMD160 50ba4db032bd7f5476a7675577d7cb246740483b SHA1 90d547f2a2fb64a5c4967df2e9d7a16826fcbaf8 SHA256 5118b56c8654d01b8a7cec3d4507ac7a0e4c76de3ee17bdfc0bed69cfa643d36
-MISC ChangeLog 1956 RMD160 d4bc5eae8dc619da219881d6f05ae52b2d732cb0 SHA1 10112ed7366b606d06d086573004cbdee6e32444 SHA256 47f331db3ba7ee2e8c52a4ae3d8b7c3df62a002ee713abcddc478e6db0505e7a
+EBUILD gpredict-1.0_beta2.ebuild 921 RMD160 4b98d635d049cfef5def774c731db0c8a522aa66 SHA1 0ec2f659c01e32a6ed497f5ab0b8845e904fb721 SHA256 2f97835d9b9289785094f583bcdc6ad939986334b061b2c8db6ba1730526ae27
+MISC ChangeLog 2075 RMD160 e222c5b5e004fc0de51516af348dd6ec61378008 SHA1 1d7c9d89c0c5637900e0bf008b7beec5dcdb1f15 SHA256 719248aaeca6ff0b399304970393d0d8daa446f7e4d5f82acf7fe1a0f99c2e8f
 MISC metadata.xml 171 RMD160 ed284df01c230fc7990a6b5888b39166d23f29ba SHA1 f3d64a69044b710e23fb874b3ee4cd338858c8b4 SHA256 a7b30fbacd0e4c312c07a3efac112a3794c81d134442d8104325734d03425adf
