@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Apr 2009; Christian Ruppert <idl0r@gentoo.org>
+  gpredict-1.0_beta2.ebuild:
+  Simplify. Removed license symlink.
+
   19 Apr 2009; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
   gpredict-1.0_beta2.ebuild, files/gpredict-1.0_beta2-doc.patch:
   added installation of needed doc files
